--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,15 @@
 {
   "dependencies": {
+    "@mui/lab": "^5.0.0-alpha.150",
+    "@mui/material": "^5.14.15",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "validator": "^13.11.0"
   }
 }
