--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
